--- a/index.html
+++ b/index.html
@@ -35,3 +35,37 @@
         </div>
       </nav>
   </body>
+
+</head>
+<body>
+  <nav>
+    <div class="nav__header">
+      <div class="logo nav__logo">
+        <a href="#">QG<span>doFrango</span></a>
+      </div>
+      <div class="nav__menu__btn" id="menu-btn">
+        <span><i class="ri-menu-line"></i></span>
+      </div>
+    </div>
+    <ul class="nav__links" id="nav-links">
+      <li><a href="#home">Home</a></li>
+      <li><a href="#special">Cárdapio</a></li>
+      <li><a href="#contact">Faça o seu pedido</a></li>
+    </ul>
+  
+  </nav>
+  <header class="section__container header__container" id="home">
+    <div class="header__image">
+      <img src="assets/header.png" alt="header" />
+    </div>
+    <div class="header__content">
+      <h1>O melhor frango de Anchietas <span>O verdadeiro sabor</span>.</h1>
+      <p class="section__description">
+        Descubra o verdadeiro sabor do melhor frango do Rio de Janeiro, venha com a gente saborear o melhor frango na brasa.
+      </p>
+      <div class="header__btn">
+        <button class="btn">Peça aqui</button>
+      </div>
+    </div>
+  </header>
+  
